# ChangeLog for sys-devel/gdb
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/gdb/ChangeLog,v 1.107 2007/02/21 18:19:21 eroyf Exp $

  21 Feb 2007; Alexander H. Færøy <eroyf@gentoo.org> gdb-6.6.ebuild:
  Stable on MIPS; bug #164336

  31 Jan 2007; Markus Rothe <corsair@gentoo.org> gdb-6.6.ebuild:
  Stable on ppc64; bug #164336

  31 Jan 2007; Olivier Crête <tester@gentoo.org> gdb-6.6.ebuild:
  Stable on amd64 per bug #164336

  31 Jan 2007; Jeroen Roovers <jer@gentoo.org> gdb-6.6.ebuild:
  Stable for HPPA (bug #164336).

  29 Jan 2007; Gustavo Zacarias <gustavoz@gentoo.org> gdb-6.6.ebuild:
  Stable on sparc wrt #164336

  29 Jan 2007; Raúl Porcel <armin76@gentoo.org> gdb-6.6.ebuild:
  x86 stable wrt bug 164336

  29 Jan 2007; Luca Barbato <lu_zero@gentoo.org> gdb-6.6.ebuild:
  Marked ppc

*gdb-6.6 (19 Dec 2006)

  19 Dec 2006; Mike Frysinger <vapier@gentoo.org> +gdb-6.6.ebuild:
  Version bump.

*gdb-6.5-r2 (24 Aug 2006)

  24 Aug 2006; Mike Frysinger <vapier@gentoo.org> +gdb-6.5-r2.ebuild:
  Add patch for gnu hash support from upstream #144851 by Christophe Saout.

  01 Jul 2006; <solar@gentoo.org> gdb-6.5-r1.ebuild:
  - fix gdbinit file causing errors with recent gdb. bug 97409

  22 Jun 2006; <solar@gentoo.org> files/gdb-6.4-scanmem.patch,
  files/gdb-6.5-scanmem.patch, gdb-6.5-r1.ebuild:
  - fix segv in scanmem when no parms are given avoid memleak also

  22 Jun 2006; Mike Frysinger <vapier@gentoo.org>
  +files/gdb-6.5-locale.patch, gdb-6.5.ebuild:
  Fix issues with funky locales #125264 by J.

*gdb-6.5-r1 (21 Jun 2006)

  21 Jun 2006; <solar@gentoo.org> +files/gdb-6.5-scanmem.patch,
  +gdb-6.5-r1.ebuild:
  - bump scanmem patch

*gdb-6.5 (21 Jun 2006)

  21 Jun 2006; Mike Frysinger <vapier@gentoo.org> +gdb-6.5.ebuild:
  Version bump.

*gdb-6.4-r5 (18 Jun 2006)

  18 Jun 2006; Tony Vroon <chainsaw@gentoo.org>
  +files/gdb-6.4-ppc-stack.patch, +gdb-6.4-r5.ebuild: