@@ -1,0 +1,6 @@
+MD5 d60f931d2f579834dd6af9e97f12be0f gdb-6.6-patches-1.1.tar.bz2 10749
+RMD160 033c9efb72902e255bbf03cf98bee23f2b5e8653 gdb-6.6-patches-1.1.tar.bz2 10749
+SHA256 75ac23ad8690c560166920701e0a4f8e2bd8437ca9db35f6a00faf3207d4578e gdb-6.6-patches-1.1.tar.bz2 10749
+MD5 a4df41d28dd514d64e8ccbfe125fd9a6 gdb-6.6.tar.bz2 14535755
+RMD160 6430798ba47a1913676622db9a73bf2bcfa703be gdb-6.6.tar.bz2 14535755
+SHA256 6e602987298db5ddb479bbb84ce653eabd9c304957a49552245f65cdc70d43bd gdb-6.6.tar.bz2 14535755
