@@ -1,6 +1,12 @@
 # ChangeLog for sys-devel/gdb
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/gdb/ChangeLog,v 1.107 2007/02/21 18:19:21 eroyf Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/gdb/ChangeLog,v 1.108 2007/03/04 23:33:50 vapier Exp $
+
+*gdb-6.6-r1 (04 Mar 2007)
+
+  04 Mar 2007; Mike Frysinger <vapier@gentoo.org> +gdb-6.6-r1.ebuild:
+  Add some fixes from upstream #150963 (fix SuperH detection) by Manuel Lauss
+  and #169366 (fix Corrupted DWARF expression error) by Hanno Meyer-Thurow.
 
   21 Feb 2007; Alexander H. Færøy <eroyf@gentoo.org> gdb-6.6.ebuild:
   Stable on MIPS; bug #164336
